data/derived/comb/progs/unify/prog5957.ml.out
Characters 56-76:
  else [55] @ digitsOfInt n;;
       ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
